# multimodal-va-pred

./: .gitignore  LICENSE  Multimodal_environment.yml  README.md  pyproject.toml
models/DeepMind_I3D/: i3d_Initializer.py  pytorch_i3d_new.py
models/Hubert/: Model.py
models/Resnet/: Resnet.py
notebooks/: audio.py  dataset.py  graph_construction.py  main.py  requirements.txt  visual_features_extraction.py
notebooks/config/: .env
notebooks/models/GTAT/: GTAT.py  GTAT_model.py  README.md  predict_emotion.py  train_emotion_model.py
notebooks/utils/: audio.py  backbones.py  config.py  dataset.py  graph_construction.py  video.py
preprocessing_audio/: Audio_HUBERT.py  Audio_HUBERT_2.py
src/: main.py
utils/: placeholder.txt
